[package]
name = "mitm-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.11", features = ["derive"] }
futures-util = "0.3.30"
http-body-util = "0.1.2"
hudsucker = "0.22.0"
hyper = { version = "1.3.1", features = ["client"] }
hyper-rustls = "0.26.0"
hyper-util = { version = "0.1.5", features = ["client", "http1", "http2", "tokio", "client-legacy"] }
regex = "1.10.2"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
